--- a/lesson-7-regression/finance_regression.ipynb
+++ b/lesson-7-regression/finance_regression.ipynb
@@ -42,7 +42,7 @@
    "outputs": [],
    "source": [
     "features_list = ['bonus', 'salary']\n",
-    "data = feature_format(dictionary, features_list, remove_any_zeroes=True)\n",
+    "data = feature_format(dictionary, features_list, remove_any_zeroes=True, sort_keys='../utils/python2_lesson06_keys.pkl')\n",
     "target, features = target_feature_split(data)"
    ]
   },
@@ -93,7 +93,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## draw the scatterplot, with color-coded training and testing points"
+    "# Plot results\n",
+    "- draw the scatterplot, with color-coded training and testing points\n",
+    "- draw the regression line, once it's coded"
    ]
   },
   {
@@ -112,22 +114,8 @@
     "\n",
     "# labels for the legend\n",
     "plt.scatter(feature_test[0], target_test[0], color=test_color, label='test')\n",
-    "plt.scatter(feature_train[0], target_train[0], color=train_color, label='train')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## draw the regression line, once it's coded"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "plt.scatter(feature_train[0], target_train[0], color=train_color, label='train')\n",
+    "\n",
     "try:\n",
     "    plt.plot(feature_test, reg.predict(feature_test))\n",
     "except NameError:\n",
