Add Lesson 9, Lesson 10, small fixes

--- a/lesson-7-regression/finance_regression.ipynb
+++ b/lesson-7-regression/finance_regression.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Starter code for the regression mini-project.\n",
+    "# Starter code for the regression mini-project\n",
     "\n",
     "- Loads up/formats a modified version of the dataset (why modified?  we've removed some trouble points that you'll find yourself in the outliers mini-project).\n",
     "- Draws a little scatterplot of the training/testing data\n",
